--- a/.github/workflows/publish-nuget.yml
+++ b/.github/workflows/publish-nuget.yml
@@ -1,9 +1,8 @@
-name: .NET Core
+name: Publish
 
 on:
   push:
-    branches: [ main ]
-    paths: './package/LibSassBuilder.nuspec'
+    branches: [ main ]    
 
 jobs:
   build:
