--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -1,10 +1,12 @@
-name: .NET
+name: Build
 
 on:
   push:
     branches: [ main ]
+    paths: ./src
   pull_request:
     branches: [ main ]
+    paths: ./src
 
 jobs:
   build:
