--- a/.github/workflows/publish-nuget.yml
+++ b/.github/workflows/publish-nuget.yml
@@ -2,7 +2,8 @@ name: Publish
 
 on:
   push:
-    branches: [ main ]    
+    branches: [ main ]
+    paths: './package/LibSassBuilder.nuspec'
 
 jobs:
   build:
@@ -26,3 +27,19 @@ jobs:
       run: dotnet test --no-restore --verbosity normal
     - name: dotnet publish
       run: dotnet publish -c Release -o ..\package\tool\ .\LibSassBuilder\
+    
+    - name: Setup NuGet.exe
+      # You may pin to the exact commit or the version.
+      # uses: NuGet/setup-nuget@04b0c2b8d1b97922f67eca497d7cf0bf17b8ffe1
+      uses: NuGet/setup-nuget@v1.0.5
+      with:
+        # NuGet version to install. Can be `latest`, `preview`, a concrete version like `5.3.1`, or a semver range specifier like `5.x`.
+        nuget-version: latest # optional, default is latest
+        # NuGet API Key to configure.
+        #nuget-api-key: # optional
+        # Source to scope the NuGet API Key to.
+        #nuget-api-key-source: # optional
+    
+    - name: NuGet pack
+      run: nuget pack 
+      working-directory: ./package/LibSassBuilder.nuspec
