--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -3,10 +3,12 @@ name: Build
 on:
   push:
     branches: [ main ]
-    paths: ./src
+    paths:
+    - './src/**'
   pull_request:
     branches: [ main ]
-    paths: ./src
+    paths: 
+    - './src/**'
 
 jobs:
   build:
