--- a/.github/workflows/publish-nuget.yml
+++ b/.github/workflows/publish-nuget.yml
@@ -43,5 +43,5 @@ jobs:
         #nuget-api-key-source: # optional
     
     - name: NuGet pack
-      run: nuget pack 
-      working-directory: ./package/LibSassBuilder.nuspec
+      run: nuget pack LibSassBuilder.nuspec
+      working-directory: '../package'
