--- a/.github/workflows/publish-nuget.yml
+++ b/.github/workflows/publish-nuget.yml
@@ -43,4 +43,9 @@ jobs:
         #nuget-api-key-source: # optional
     
     - name: NuGet pack
-      run: nuget pack '../package/LibSassBuilder.nuspec'
+      run: nuget pack '../package/LibSassBuilder.nuspec' -OutputDirectory 'nuget-package'
+      
+    - uses: actions/upload-artifact@v2.2.1
+      with:
+        name: nuget-package
+        path: 'nuget-package'
