--- a/.github/workflows/publish-nuget.yml
+++ b/.github/workflows/publish-nuget.yml
@@ -48,4 +48,4 @@ jobs:
     - uses: actions/upload-artifact@v2.2.1
       with:
         name: nuget-package
-        path: 'nuget-package/*'
+        path: './nuget-package/*'
