--- a/src/LibSassBuilder/LibSassBuilder.csproj
+++ b/src/LibSassBuilder/LibSassBuilder.csproj
@@ -7,6 +7,8 @@
 
 	<ItemGroup>
 		<PackageReference Include="LibSassHost" Version="1.3.2" />
+		<PackageReference Include="LibSassHost.Native.linux-x64" Version="1.3.2" />
+		<PackageReference Include="LibSassHost.Native.osx-x64" Version="1.3.2" />
 		<PackageReference Include="LibSassHost.Native.win-x64" Version="1.3.2" />
 	</ItemGroup>
 
