--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -4,11 +4,11 @@ on:
   push:
     branches: [ main ]
     paths:
-    - './src/**'
+    - 'src/**'
   pull_request:
     branches: [ main ]
     paths: 
-    - './src/**'
+    - 'src/**'
 
 jobs:
   build:
