--- a/src/LibSassBuilder/LibSassBuilder.csproj
+++ b/src/LibSassBuilder/LibSassBuilder.csproj
@@ -2,7 +2,19 @@
 
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
+		<Version>1.4.0</Version>
 		<TargetFramework>net5.0</TargetFramework>
+		<PackAsTool>true</PackAsTool>
+		<PackageId>LibSassBuilder-Tool</PackageId>
+		<ToolCommandName>lsb</ToolCommandName>
+		<Authors>Johan van Rensburg</Authors>
+		<Description>Compile Sass files to css from CLI. Install globally with `dotnet tool install -g LibSassBuilder-Tool`</Description>
+		<PackageProjectUrl>https://github.com/johan-v-r/LibSassBuilder</PackageProjectUrl>
+		<RepositoryUrl>https://github.com/johan-v-r/LibSassBuilder.git</RepositoryUrl>
+		<RepositoryType>git</RepositoryType>
+		<PackageTags>Sass Build LibSass SassBuilder</PackageTags>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<PackageIcon>sass.png</PackageIcon>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -10,6 +22,13 @@
 		<PackageReference Include="LibSassHost.Native.linux-x64" Version="1.3.2" />
 		<PackageReference Include="LibSassHost.Native.osx-x64" Version="1.3.2" />
 		<PackageReference Include="LibSassHost.Native.win-x64" Version="1.3.2" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Include="..\..\package\sass.png">
+	    <Pack>True</Pack>
+	    <PackagePath></PackagePath>
+	  </None>
 	</ItemGroup>
 
 </Project>
