Compile sass only if changed, and build if files changed

--- a/package/LibSassBuilder.nuspec
+++ b/package/LibSassBuilder.nuspec
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
-<package >
+<package>
   <metadata>
     <id>LibSassBuilder</id>
-    <version>1.4.0</version>
+    <version>1.4.0.2</version>
     <title>LibSassBuilder</title>
     <summary>Auto build task to compile .scss/.sass files to .css</summary>
     <authors>Johan van Rensburg</authors>
@@ -11,7 +11,8 @@
     <description>Compile Sass files to css on project build.</description>
     <tags>Sass Build LibSass SassBuilder</tags>
     <projectUrl>https://github.com/johan-v-r/LibSassBuilder</projectUrl>
-    <repository type="git" url="https://github.com/johan-v-r/LibSassBuilder.git"></repository>
+    <repository type="git" url="https://github.com/johan-v-r/LibSassBuilder.git">
+    </repository>
     <license type="expression">MIT</license>
     <icon>sass.png</icon>
   </metadata>
