--- a/src/LibSassBuilder/LibSassBuilder.csproj
+++ b/src/LibSassBuilder/LibSassBuilder.csproj
@@ -18,6 +18,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="CommandLineParser" Version="2.8.0" />
 		<PackageReference Include="LibSassHost" Version="1.3.2" />
 		<PackageReference Include="LibSassHost.Native.linux-x64" Version="1.3.2" />
 		<PackageReference Include="LibSassHost.Native.osx-x64" Version="1.3.2" />
