--- a/src/LibSassBuilder/LibSassBuilder.csproj
+++ b/src/LibSassBuilder/LibSassBuilder.csproj
@@ -1,8 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
-		<Version>1.6.0</Version>
+		<Version>1.6.1</Version>
 		<TargetFramework>net5.0</TargetFramework>
 		<PackAsTool>true</PackAsTool>
 		<PackageId>LibSassBuilder-Tool</PackageId>
