Set solution build order and project reference dependencies

--- a/src/LibSassBuilder.ExcludeTests/LibSassBuilder.ExcludeTests.csproj
+++ b/src/LibSassBuilder.ExcludeTests/LibSassBuilder.ExcludeTests.csproj
@@ -19,6 +19,10 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\LibSassBuilder\LibSassBuilder.csproj" />
+  </ItemGroup>
+
 	<Target Name="PreBuild" BeforeTargets="PreBuildEvent">
 		<Exec Command="dotnet run --project ../LibSassBuilder -e foo bar" />
 	</Target>
