--- a/src/LibSassBuilder/LibSassBuilder.csproj
+++ b/src/LibSassBuilder/LibSassBuilder.csproj
@@ -19,10 +19,11 @@
 
 	<ItemGroup>
 		<PackageReference Include="CommandLineParser" Version="2.8.0" />
-		<PackageReference Include="LibSassHost" Version="1.3.2" />
-		<PackageReference Include="LibSassHost.Native.linux-x64" Version="1.3.2" />
-		<PackageReference Include="LibSassHost.Native.osx-x64" Version="1.3.2" />
-		<PackageReference Include="LibSassHost.Native.win-x64" Version="1.3.2" />
+		<PackageReference Include="DartSassHost" Version="1.0.0-preview6" />
+		<PackageReference Include="JavaScriptEngineSwitcher.ChakraCore" Version="3.12.6" />
+    <PackageReference Include="JavaScriptEngineSwitcher.ChakraCore.Native.linux-x64" Version="3.12.6" />
+    <PackageReference Include="JavaScriptEngineSwitcher.ChakraCore.Native.osx-x64" Version="3.12.6" />
+    <PackageReference Include="JavaScriptEngineSwitcher.ChakraCore.Native.win-x64" Version="3.12.6" />
 	</ItemGroup>
 
 	<ItemGroup>
