--- a/src/LibSassBuilder/LibSassBuilder.csproj
+++ b/src/LibSassBuilder/LibSassBuilder.csproj
@@ -23,6 +23,7 @@
 		<PackageReference Include="LibSassHost.Native.linux-x64" Version="1.3.2" />
 		<PackageReference Include="LibSassHost.Native.osx-x64" Version="1.3.2" />
 		<PackageReference Include="LibSassHost.Native.win-x64" Version="1.3.2" />
+		<PackageReference Include="LibSassHost.Native.win-x86" Version="1.3.2" />
 	</ItemGroup>
 
 	<ItemGroup>
