--- a/src/LibSassBuilder.Tests/LibSassBuilder.Tests.csproj
+++ b/src/LibSassBuilder.Tests/LibSassBuilder.Tests.csproj
@@ -24,7 +24,7 @@
   </ItemGroup>
 
 	<Target Name="PreBuild" BeforeTargets="PreBuildEvent">
-		<Exec Command="dotnet run --project ../LibSassBuilder" />
+		<Exec Command="dotnet run --project ../LibSassBuilder ./" />
 	</Target>
 
 </Project>
